<resources>
    <string name="app_name">Ganitum</string>
    <string name="login_with">Login With</string>
    <string name="terms_and_condition">terms and condition</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="or">Or</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="mobile">Mobile</string>
    <string name="sign_in_using_google">Sign in Using Google</string>
    <string name="register_your_business">Register Your Business</string>
    <string name="company_name">Company Name</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="pin_code">Pin Code</string>
    <string name="address_2">Address 2</string>
    <string name="address_1">Address 1</string>
    <string name="gst_no">GST No.</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="go_to_login"><u>Go To Login.</u></string>
    <string name="title_activity_home_page">homePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="purchase">Purchase</string>
    <string name="sale">Sale</string>
    <string name="customer">Customer</string>
    <string name="stock">Stock</string>
    <string name="bank">Bank</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_chat">Login Chat</string>
    <string name="user_id">User ID</string>
    <string name="by_entering_phone_number_you_agree_to">By Entering Phone Number\nYou agree to</string>
    <string name="terms_and_conditions_2"><u>Terms and Conditions.</u></string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="go_to_registration"><u>Go To Registration.</u></string>
    <string name="current_buy">Current Buy</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="final_price">Final Price</string>
    <string name="final_submit">Final Submit</string>
    <string name="all_view">All View</string>
    <string name="profile_update">Profile Update</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="add_customer">Add Customer</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="customer_name">Customer Name</string>
    <string name="top_buyer">Top Buyer</string>
    <string name="credit">Credit</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="colour">Colour</string>
    <string name="name">Name</string>
    <string name="state_code">State Code</string>
    <string name="add">Add</string>
    <string name="products">Products</string>
    <string name="quantity">Quantity</string>
    <string name="new_purchase">New Purchase</string>
    <string name="cgst">CGST</string>
    <string name="sgst">SGST</string>
    <string name="igst">IGST</string>
    <string name="total">Total =</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="skip">Skip</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="date_of_purchase">Date of Purchase</string>
    <string name="pref_customer">Pref Customer</string>
    <string name="product_name">Product Name</string>
    <string name="hsn">HSN</string>
    <string name="unit">Unit</string>
    <string name="gst_2">GST@</string>
    <string name="cgst_sgst_igst">% =(CGST+SGST+IGST)</string>
    <string name="sale_price">Sale Price</string>
    <string name="total_2">Total</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="direct_sale">Direct Sale</string>
    <string name="new_sale">New Sale</string>
    <string name="sale_price_including_gst">Sale Price Including GST</string>
    <string name="send_money_using_upi">Send Money Using UPI</string>
    <string name="scan_qr">Scan QR</string>
    <string name="enter_mobile_number_ganitum_code">Enter Mobile Number/Ganitum Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="payment_through_scan">Payment Through Scan</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="time">Time</string>
    <string name="send_money">Send Money</string>
    <string name="mobile_number_or_upi_id">Mobile Number or UPI ID</string>
    <string name="select_image_from">Select Image From</string>
    <string name="valid_first_name">Enter a Valid First Name</string>
    <string name="valid_last_name">Enter a Valid Last Name</string>
    <string name="valid_mobile_number">Enter a Valid Ten Digit Mobile Number</string>
    <string name="valid_email">Enter a Valid Email ID</string>
    <string name="valid_address">Enter a Valid Address</string>
    <string name="valid_city">Enter a Valid City Name</string>
    <string name="valid_state">Enter a Valid Sate Name</string>
    <string name="valid_gst">Enter a Valid GST Number</string>
    <string name="inv_no">Inv No.</string>
    <string name="product">Product</string>
    <string name="invoice_gst">GST</string>
    <string name="gst_percent">GST(%):</string>
    <string name="name_colon">Name:</string>
    <string name="address_colon">Address</string>
    <string name="phone_number_colon">Phone Number:</string>
    <string name="email_colon">Email:</string>
    <string name="inv_no_colon">Inv No:</string>
    <string name="product_colon">Product:</string>
    <string name="quantity_colon">Quantity:</string>
    <string name="price_colon">Price:</string>
    <string name="pdf_share">PDF Share</string>
    <string name="total_colon">Total:</string>
    <string name="valid_product_name">Enter A Valid Product Name</string>
    <string name="valid_hsn">Enter A Valid HSN</string>
    <string name="non_empty_unit">Unit Can Not Be Empty</string>
    <string name="non_empty_quantity">Quantity Can Not Be Empty</string>
    <string name="valid_price">Please Enter The Price Of The Product</string>
    <string name="non_empty_total_price">Total Price Can Not Be Empty</string>
    <string name="non_empty_sale_price">Sale Price Can Not Be Empty</string>
    <string name="non_empty_gst">GST Value Can Not Be Empty</string>
    <string name="search_items_hints">Search Items</string>
    <string name="search_hint">Search...</string>
    <string name="cancel">Cancel</string>
    <string name="okButton">OK</string>
    <string name="brand_name">Brand Name</string>
    <string name="find_your_product_here">Find Your Product Here</string>
    <string name="indian_rupee">₹</string>
    <string name="enter_valid_name">Enter A Valid Name</string>
    <string name="valid_invoice_number">Enter A Valid Invoice Number</string>
    <string name="valid_date_of_purchase">Enter A Valid Date of Purchase</string>
    <string name="valid_state_code">Enter A Valid State Code</string>
    <string name="valid_pin_code">Enter A Valid Six Digit Pin Code</string>
    <string name="valid_user_id">Enter A Valid User ID</string>
    <string name="valid_password">Enter A Valid Password</string>
    <string name="type_a_message">Type a Message</string>
    <string name="empty_message">You Can Not Send An Empty Message</string>
    <string name="valid_user_name">Enter A Vaild User Name</string>
    <string name="valid_password_entry">Enter A Password</string>
    <string name="please_wait">Please Wait......</string>
    <string name="valid_company_name">Enter A Valid Company Name</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_received_on_your_registered_phone">Enter OTP received On\nYour registered Phone</string>
    <string name="to_change_phone_number_click_here"><u>To Change Phone Number Click Here</u></string>
    <string name="resend_otp">Resend OTP</string>
</resources>
