<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.bankingActivity.sendMoney"
    tools:ignore="ContentDescription"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_chat_back"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_money_using_upi"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="40dp"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/scanQR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/red_background_button"
                android:text="@string/scan_qr"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_mobile_number_ganitum_code"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number_or_upi_id"
                    android:maxLines="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="5dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payment_through_scan"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/stock_display_bar"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20sp"
                    android:textColor="#ffffff" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="20sp"
                    android:textColor="#ffffff" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beneficiary"
                    android:textSize="20sp"
                    android:textColor="#ffffff" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textSize="20sp"
                    android:textColor="#ffffff" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".2"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sendMoneyRecycler"
                android:layout_width="match_parent"
                android:layout_height="300dp">
            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/sendMoney"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/red_background_button"
                android:text="@string/send_money"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="#ffffff"
                android:textStyle="bold"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>